# data-source-identification

./: .gitignore  .gitmodules  .pydocstyle  Dockerfile  ENV.md  README.md  alembic.ini  apply_migrations.py  docker-compose-test.yml  docker-compose.yml  execute.sh  identification_pipeline.py  pyproject.toml  pytest.ini  requirements.txt  start_mirrored_local_app.py  urls.csv
AnnotationHelper/: harvest_html.py  preprocess_and_load_urls.py
CommonCrawler/: CommonCrawler.py
Tests/: test_agency_homepage_searcher_integration.py  test_agency_homepage_searcher_unit.py  test_common_crawler_integration.py  test_common_crawler_unit.py  test_dev_database.py  test_google_searcher_integration.py  test_html_tag_collector_integration.py  test_label_studio_interface_integration.py  test_source_text_collector_unit.py  test_type_and_docstyle_checking.py
agency-identifier/: README.md  identifier.py
agency_homepage_searcher/: README.md  agency_info.py  db_manager.py  google_searcher.py  homepage_searcher.py  huggingface_api_manager.py  main.py  requirements_agency_homepage_searcher_action.txt
agency_identifier/: MuckrockAPIInterface.py  README.md  identifier.py
alembic/: env.py
annotation_pipeline/: README.md  config.ini  populate_labelstudio.py  record_types.txt  requirements.txt
api/: README.md  dependencies.py  main.py
collector_db/: AsyncDatabaseClient.py  BatchInfo.py  DTOConverter.py  DatabaseClient.py  StatementComposer.py  URLInfo.py  alembic.ini  constants.py  database.db  enums.py  helper_functions.py  models.py
collector_manager/: AsyncCollectorBase.py  AsyncCollectorManager.py  CollectorBase.py  CollectorManager.py  CommandHandler.py  ExampleCollector.py  README.md  collector_mapping.py  constants.py  enums.py  main.py
common_crawler/: CommonCrawler.py  README.md  argparser.py  cache.json  cache.py  config.ini  crawler.py  csv_manager.py  main.py  requirements.txt  utils.py
core/: AsyncCore.py  AsyncCoreLogger.py  CoreCommandHandler.py  CoreInterface.py  CoreLogger.py  FunctionTrigger.py  README.md  ScheduledTaskManager.py  SourceCollectorCore.py  TaskManager.py  enums.py  exceptions.py  helpers.py
db/: AsyncDatabaseClient.py  DTOConverter.py  DatabaseClient.py  README.md  StatementComposer.py  enums.py  helper_functions.py  models.py
google_searcher/: README.md  google_search_queue_manager.py  google_searcher.py  main.py
hf_testing/: README.md  hf_trainer.py  huggingface_test.py  train-urls.csv
html-tag-collector/: README.md  collector.py  urls.json  urls_and_tags.json
html_tag_collector/: DataClassTags.py  README.md  ResponseFetcher.py  ResponseParser.py  RootURLCache.py  URLRequestInterface.py  collector.py  common.py  requirements.txt  url_adjustment_functions.py  urls.json  util.py
hugging_face/: HuggingFaceInterface.py  URLClassifier.py  clean_data.py  relevancy_worker.py  requirements.txt
label_studio_interface/: LabelStudioAPIManager.py  README.md  (+4 more)
linklabel/: CMakeLists.txt  README.md
linklabel/src/: main.cpp
(+1644 files in other folders)
