[project]
name = "data-source-identification"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp~=3.11.11",
    "alembic~=1.14.0",
    "apscheduler~=3.11.0",
    "asyncpg~=0.30.0",
    "beautifulsoup4>=4.12.3",
    "bs4~=0.0.2",
    "ckanapi~=4.8",
    "datasets~=2.19.1",
    "docker~=7.1.0",
    "environs>=14.1.1",
    "fastapi[standard]~=0.115.6",
    "from-root~=1.3.0",
    "google-api-python-client>=2.156.0",
    "httpx~=0.28.1",
    "huggingface-hub~=0.28.1",
    "keras~=2.15.0",
    "lxml~=5.1.0",
    "marshmallow~=3.23.2",
    "numpy~=1.26.4",
    "openai~=1.60.1",
    "pandas~=2.2.3",
    "playwright~=1.49.1",
    "psycopg2-binary~=2.9.6",
    "psycopg[binary]~=3.1.20",
    "pydantic~=2.10.6",
    "pyjwt~=2.10.1",
    "python-dotenv~=1.0.1",
    "requests~=2.32.3",
    "sqlalchemy~=2.0.36",
    "starlette~=0.45.3",
    "tensorflow-cpu~=2.15.1",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "tqdm>=4.64.1",
    "transformers~=4.40.2",
    "urllib3~=1.26.18",
    "uvicorn~=0.34.0",
]

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pendulum>=3.1.0",
    "pytest>=7.2.2",
    "pytest-asyncio~=0.25.2",
    "pytest-mock==3.12.0",
    "pytest-timeout~=2.3.1",
]


