[project]
name = "data-source-identification"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp~=3.11.11",
    "aiolimiter>=1.2.1",
    "alembic~=1.14.0",
    "apscheduler~=3.11.0",
    "asyncpg~=0.30.0",
    "beautifulsoup4>=4.12.3",
    "brotli>=1.1.0",
    "bs4~=0.0.2",
    "ckanapi~=4.8",
    "datasets~=2.19.1",
    "discord-poster>=0.1.0",
    "docker~=7.1.0",
    "environs>=14.1.1",
    "fastapi[standard]~=0.115.6",
    "from-root~=1.3.0",
    "google-api-python-client>=2.156.0",
    "httpx~=0.28.1",
    "lxml~=5.1.0",
    "marshmallow~=3.23.2",
    "openai~=1.60.1",
    "pdap-access-manager==0.3.6",
    "playwright~=1.49.1",
    "psycopg2-binary~=2.9.6",
    "psycopg[binary]~=3.1.20",
    "pydantic~=2.11.3",
    "pyjwt~=2.10.1",
    "python-dotenv~=1.0.1",
    "requests~=2.32.3",
    "sqlalchemy~=2.0.36",
    "starlette~=0.45.3",
    "tqdm>=4.64.1",
    "urllib3~=1.26.18",
    "uvicorn~=0.34.0",
]

[dependency-groups]
dev = [
    "deepdiff>=8.5.0",
    "docker>=7.1.0",
    "pendulum>=3.1.0",
    "pytest>=7.2.2",
    "pytest-asyncio~=0.25.2",
    "pytest-mock==3.12.0",
    "pytest-timeout~=2.3.1",
]


